<?xml version="1.0"?>
<package format="3">
  <name>hybrid_astar_searcher</name>
  <version>0.0.0</version>
  <description>The hybrid_astar_searcher package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="jiaxier@todo.todo">jiaxier</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>ompl</depend> 
  <depend>grid_map_core</depend>  
  <depend>grid_map_msgs</depend>  
  <depend>visualization_msgs</depend>  
  <depend>tf2_geometry_msgs</depend>  
  <!-- Test dependencies -->
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Documentation dependencies -->
  <doc_depend>doxygen</doc_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>